--- a/docs/management/action-types.asciidoc
+++ b/docs/management/action-types.asciidoc
@@ -74,7 +74,7 @@ Access to connectors is granted based on your privileges to alerting-enabled fea
 [float]
 === Connector networking configuration
 
-Use the <<action-settings, Action configuration settings>> to customize connector networking configurations. You can set configurations that apply to all your connectors or use `xpack.actions.customHostSettings` to set per-host configurations.
+Use the <<action-settings, Action configuration settings>> to customize connector networking configurations, such as proxies, certificates or TLS settings. You can set configurations that apply to all your connectors or use `xpack.actions.customHostSettings` to set per-host configurations.
 
 [float]
 [[connectors-list]]
