--- a/docs/management/connectors/action-types/servicenow.asciidoc
+++ b/docs/management/connectors/action-types/servicenow.asciidoc
@@ -19,7 +19,7 @@ Username::  Username for HTTP Basic authentication.
 Password::  Password for HTTP Basic authentication.
 
 [float]
-=== Connector networking configuration
+==== Connector networking configuration
 
 Use the <<action-settings, Action configuration settings>> to customize connector networking configurations, such as proxies, certificates or TLS settings. You can set configurations that apply to all your connectors or use `xpack.actions.customHostSettings` to set per-host configurations.
 
