--- a/docs/setup/settings.asciidoc
+++ b/docs/setup/settings.asciidoc
@@ -724,10 +724,10 @@ out through *Advanced Settings*. *Default: `true`*
 sources and images. When false, Vega can only get data from {es}. *Default: `false`*
 
 | `xpack.discoverEnhanced.actions.exploreDataInContextMenu.enabled`
- | Enables the *Explore underlying data* option that allows you to open *Discover* from a dashboard panel and view the panel data. *Default: `true`*
+ | Enables the *Explore underlying data* option that allows you to open *Discover* from a dashboard panel and view the panel data. *Default: `false`*
 
  | `xpack.discoverEnhanced.actions.exploreDataInChart.enabled`
- | Enables you to view the underlying documents in a data series from a dashboard panel. *Default: `true`*
+ | Enables you to view the underlying documents in a data series from a dashboard panel. *Default: `false`*
 
 | `xpack.license_management.enabled`
  | Set this value to false to
