--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -342,7 +342,7 @@ Metrics::
 * Increase the groupBy pagination size on metric threshold alerts {kibana-pull}99683[#99683]
 * Adds anomalies tab to enhanced host details overlay {kibana-pull}96967[#96967]
 * Improved UI error messaging for handling ES query errors in a snapshot endpoint {kibana-pull}96871[#96871]
-* Adds Log Rate to the metrics tab {kibana-pull}96596[#96596]
+* Adds log rate tab to enhanced host details overlay {kibana-pull}96596[#96596]
 * Change composite.size of snapshot ES query to improve speed {kibana-pull}95994[#95994]
 * Change top_hits aggregation to top_metrics for snapshot api {kibana-pull}95644[#95644]
 * Adds preview charts to Inventory alerts {kibana-pull}91658[#91658]
