--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -347,7 +347,7 @@ Metrics::
 * Change top_hits aggregation to top_metrics for snapshot api {kibana-pull}95644[#95644]
 * Adds preview charts to Inventory alerts {kibana-pull}91658[#91658]
 * Enhanced metrics widget on Observability overview page {kibana-pull}90879[#90879]
-* Adds anomalies table to flyout {kibana-pull}90305[#90305]
+* Adds anomalies table to Metrics app {kibana-pull}90305[#90305]
 Monitoring::
 * Fetch detection adoption metrics {kibana-pull}97789[#97789]
 * Added ability to possibly distinguish between Agent type metrics in APM {kibana-pull}95129[#95129]
