--- a/api_docs/lists.mdx
+++ b/api_docs/lists.mdx
@@ -22,8 +22,14 @@ import listsObj from './lists.json';
 ### Objects
 <DocDefinitionList data={listsObj.client.objects}/>
 
+### Functions
+<DocDefinitionList data={listsObj.client.functions}/>
+
 ### Classes
 <DocDefinitionList data={listsObj.client.classes}/>
+
+### Interfaces
+<DocDefinitionList data={listsObj.client.interfaces}/>
 
 ## Server
 
@@ -32,4 +38,12 @@ import listsObj from './lists.json';
 
 ### Interfaces
 <DocDefinitionList data={listsObj.server.interfaces}/>
+
+## Common
+
+### Functions
+<DocDefinitionList data={listsObj.common.functions}/>
+
+### Consts, variables and types
+<DocDefinitionList data={listsObj.common.misc}/>
 
